--- a/_posts/2020-02-20-lecture-1.md
+++ b/_posts/2020-02-20-lecture-1.md
@@ -5,6 +5,7 @@ layout: default
 modal-id: 1
 date: 2020-02-20
 slides: https://myslide.cn/player/22258
+file: lecture-1.pdf
 thumbnail: eniac.jpg
 alt: image-alt
 project-date: Feb 2020
